fixes stretched table styling

--- a/src/Components/ResultsList/ResultsList.module.css
+++ b/src/Components/ResultsList/ResultsList.module.css
@@ -5,15 +5,14 @@
     max-width: 1336px;
     margin: 24px 0 0 0;
     overflow: auto;
+    border: 2px solid black;
+    border-radius: 8px;
 }
 
 .table {
     width: 100%;
-    min-height: 200px;
     text-align: left;
     text-indent: 4px;
-    border: 2px solid black;
-    border-radius: 8px;
 }
 
 .table__header {
